# eBay-2025-ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
outputs/gazetteers/: gazetteers.json
scripts/: compute_fbeta_local.py  make_quiz_submission.sh  mlm_domain_impact.py  tune_thresholds.py
src/ebayner/: data.py  evaluate.py  gazetteer.py  model.py  postprocess.py  predict.py  rules.py  train.py  utils.py
